@@ -4,7 +4,7 @@ Section: libs
 Priority: optional
 Depends: libc6 (= ${binary:Version})
 Replaces: libc6-dev-i386
-Conflicts: ia32-libs (<= 1.5)
+Conflicts: ia32-libs (<= 1.5), fakeroot (<= 1.12.2), gnu-efi (<= 3.0e-2), fakechroot (<= 2.9-1), fglrx-glx-ia32 (<= 1:9-5-1), ia32-libs (<= 2.7), ia32-libs-gtk (<= 2.7), lib32asound2 (<= 1.0.20-2), lib32asound2-dev (<= 1.0.20-2), lib32bz2-1.0 (<= 1.0.5-2), lib32bz2-dev (<= 1.0.5-2), lib32ffi-dev (<= 3.0.7-1), lib32ffi5 (<= 3.0.7-1), lib32g2c0 (<= 1:3.4.6-9), lib32gcc1 (<= 1:4.4.0-5), lib32gfortran3 (<= 4.4.0-5), lib32gmp3 (<= 2:4.3.1+dfsg-1), lib32gmp3-dev (<= 2:4.3.1+dfsg-1), lib32gmpxx4 (<= 2:4.3.1+dfsg-1), lib32gomp1 (<= 4.4.0-5), lib32icu-dev (<= 4.0.1-2), lib32icu38, lib32icu40 (<= 4.0.1-2), lib32mudflap0 (<= 4.4.0-5), lib32ncurses5 (<= 5.7+20090523-1), lib32ncurses5-dev (<= 5.7+20090523-1), lib32ncursesw5 (<= 5.7+20090523-1), lib32ncursesw5-dev (<= 5.7+20090523-1), lib32nss-mdns (<= 0.10-3), lib32objc2 (<= 4.4.0-5), lib32readline5 (<= 5.2-4), lib32readline5-dev (<= 5.2-4), lib32stdc++6 (<= 4.4.0-5), lib32stdc++6-4.4-dbg (<= 4.4.0-5), lib32z1 (<= 1:1.2.3.3.dfsg-13), lib32z1-dev (<= 1:1.2.3.3.dfsg-13), libc6-dev-i386 (<= 2.9-13)
 Description: GNU C Library: 32bit shared libraries for AMD64
  This package includes shared versions of the standard C
  library and the standard math library, as well as many others.
@@ -14,7 +14,7 @@ Package: libc6-dev-i386
 Architecture: amd64
 Section: libdevel
 Priority: optional
-Conflicts: ia32-libs-dev (<< 1.18)
+Conflicts: ia32-libs-dev (<= 1.18), fakeroot (<= 1.12.2), gnu-efi (<= 3.0e-2), fakechroot (<= 2.9-1), fglrx-glx-ia32 (<= 1:9-5-1), ia32-libs (<= 2.7), ia32-libs-gtk (<= 2.7), lib32asound2 (<= 1.0.20-2), lib32asound2-dev (<= 1.0.20-2), lib32bz2-1.0 (<= 1.0.5-2), lib32bz2-dev (<= 1.0.5-2), lib32ffi-dev (<= 3.0.7-1), lib32ffi5 (<= 3.0.7-1), lib32g2c0 (<= 1:3.4.6-9), lib32gcc1 (<= 1:4.4.0-5), lib32gfortran3 (<= 4.4.0-5), lib32gmp3 (<= 2:4.3.1+dfsg-1), lib32gmp3-dev (<= 2:4.3.1+dfsg-1), lib32gmpxx4 (<= 2:4.3.1+dfsg-1), lib32gomp1 (<= 4.4.0-5), lib32icu-dev (<= 4.0.1-2), lib32icu38, lib32icu40 (<= 4.0.1-2), lib32mudflap0 (<= 4.4.0-5), lib32ncurses5 (<= 5.7+20090523-1), lib32ncurses5-dev (<= 5.7+20090523-1), lib32ncursesw5 (<= 5.7+20090523-1), lib32ncursesw5-dev (<= 5.7+20090523-1), lib32nss-mdns (<= 0.10-3), lib32objc2 (<= 4.4.0-5), lib32readline5 (<= 5.2-4), lib32readline5-dev (<= 5.2-4), lib32stdc++6 (<= 4.4.0-5), lib32stdc++6-4.4-dbg (<= 4.4.0-5), lib32z1 (<= 1:1.2.3.3.dfsg-13), lib32z1-dev (<= 1:1.2.3.3.dfsg-13), libc6-i386 (<= 2.9-13)
 Provides: lib32c-dev
 Depends: libc6-i386 (= ${binary:Version}), libc6-dev (= ${binary:Version})
 Recommends: gcc-multilib
