@@ -1,9 +1,13 @@
 eglibc (2.9-14) unstable; urgency=low
 
+  [ Aurelien Jarno ]
   * debian/debhelper.in/locales.postrm: remove /etc/default/locale on
     purge.  Closes: #530902.
 
- -- Aurelien Jarno <aurel32@debian.org>  Thu, 28 May 2009 22:10:00 +0200
+  [ Clint Adams ]
+  * Move /emul/ia32-linux libraries to /usr/lib32.
+
+ -- Clint Adams <schizo@debian.org>  Sat, 13 Jun 2009 09:51:12 -0400
 
 eglibc (2.9-13) unstable; urgency=low
 
